// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component matches snapshot (disabled) 1`] = `
<label
  className="display--inlineBlock"
>
  <CustomCheckboxContainer
    checked={false}
    className="fdsCheckboxContainer"
    onChange={[Function]}
  >
    <CustomCheckboxInput
      disabled={true}
      name="snapshot_checkbox"
    />
    <span
      aria-hidden={true}
      style={
        Object {
          "pointerEvents": "none",
        }
      }
    >
      <CheckEmptyIcon
        size="xs"
      />
    </span>
  </CustomCheckboxContainer>
  <span
    className="padding--left--half"
  >
    Snapshot Label
  </span>
</label>
`;

exports[`Checkbox component matches snapshot (with label) 1`] = `
<label
  className="display--inlineBlock"
>
  <CustomCheckboxContainer
    checked={false}
    className="fdsCheckboxContainer"
    onChange={[Function]}
  >
    <CustomCheckboxInput
      name="snapshot_checkbox"
    />
    <span
      aria-hidden={true}
      style={
        Object {
          "pointerEvents": "none",
        }
      }
    >
      <CheckEmptyIcon
        size="xs"
      />
    </span>
  </CustomCheckboxContainer>
  <span
    className="padding--left--half"
  >
    Snapshot Label
  </span>
</label>
`;

exports[`Checkbox component matches snapshot (without label) 1`] = `
<div
  className="display--inlineBlock"
>
  <CustomCheckboxContainer
    checked={false}
    className="fdsCheckboxContainer"
    onChange={[Function]}
  >
    <CustomCheckboxInput
      aria-label="snapshot checkbox"
      name="snapshot_checkbox"
    />
    <span
      aria-hidden={true}
      style={
        Object {
          "pointerEvents": "none",
        }
      }
    >
      <CheckEmptyIcon
        size="xs"
      />
    </span>
  </CustomCheckboxContainer>
</div>
`;
